Refactor PricePersistenceAdapterTest to use getFirst().